# agent-relay

./: .gitignore  LICENSE  README.md  pyproject.toml
src/relay/: __init__.py  cli.py  orchestrator.py  prompt.py
src/relay/backends/: __init__.py  anthropic_backend.py  base.py  cursor_backend.py  manual.py  openai_backend.py
src/relay/exporters/: __init__.py  cursor.py
src/relay/protocol/: __init__.py  artifacts.py  roles.py  state.py  validator.py  workflow.py
src/relay/templates/plan_review_impl_audit/: workflow.yml
src/relay/templates/plan_review_impl_audit/artifacts/: acceptance_checklist.md  context.md
src/relay/templates/plan_review_impl_audit/roles/: auditor.yml  implementer.yml  planner.yml  reviewer.yml
src/relay/tui/: __init__.py  app.py
tests/e2e/: test_full_loop.py
tests/integration/: test_init.py  test_next.py  test_reset.py  test_run_manual.py  test_status.py  test_validate.py
tests/unit/: test_backends.py  test_iteration_limits.py  test_orchestrator.py  test_prompt_assembly.py  test_prompt_truncation.py  test_role_invalid.py  test_role_valid.py  test_state_document.py  test_transitions_branching.py  test_transitions_linear.py  test_verdict_extraction.py  test_workflow_invalid.py  test_workflow_valid.py
